# Genre_Reveal

./: .gitignore  CMakeLists.txt  README.md  dist_cpu.cpp  dist_gpu.cpp  point.h  point.hpp  serial.cpp  shared_cpu.cpp  updateCentroids.cu  visualize.py
csv-parser/: csv.h  csv.hpp
cuda/: CMakeLists.txt  dist_gpu.cpp  shared_gpu.cu  updateCentroids.cu
doc/: descriptions.md  distributed_memory_comparison.md  separate_build_instructions.md  shared_memory_comparison.md
